# Api-tests

./: .gitignore  configuration.py  conftest.py  pyproject.toml
endpoinds/: authorization_game.py  credit_debit.py  free_spin.py  post_method.py  testpartner.py
tests/: test_balance.py
