[project]
name = "api-test-creditdebit"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Dmitry Shulga",email = "Shulga.dmitry.16.1992@yandex.by"}
]

requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"



[tool.pytest.ini_options]
addopts = " -v -s --alluredir=results"

